Use processBuilder .inheritIO()